# rust-bfield

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmark.rs
docs/notebook/: calculate-parameters.ipynb  requirements.txt
src/: bfield.rs  bfield_member.rs  combinatorial.rs  lib.rs  marker.rs  member.rs
test_data/legacy/: test_bfield.mmap  test_bfield.mmap.secondary.001  test_bfield.mmap.secondary.002  test_bfield.params
