[package]
name = "bfield"
version = "0.2.1"
authors = ["Roderick Bovee <roderick@onecodex.com>"]
edition = "2018"

[dependencies]
bincode = "1"
mmap-bitvec = { git="ssh://git@github.com/onecodex/mmap-bitvec.git", tag="v0.3.1" }
murmurhash3 = "0.0.5"
once_cell = "1.10.0"
bitvec = {version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[features]
prefetching = []

[dev-dependencies]
criterion = "0.3"
tempfile = "3.3.0"

[[bench]]
name = "benchmark"
harness = false
