[package]
name = "bfield"
version = "0.2.1"
authors = ["Roderick Bovee <roderick@onecodex.com>"]
edition = "2018"

[dependencies]
bincode = "1"
mmap-bitvec = "0.4.0"
murmurhash3 = "0.0.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"
tempfile = "3.3.0"

[[bench]]
name = "benchmark"
harness = false
