[package]
name = "bfield"
description = "B-field datastructure implementation in Rust"
version = "0.3.0"
authors = ["Vincent Prouillet <vincent@onecodex.com>", "Gerrit Gerritsen <gerrit@onecodex.com>", "Nick Greenfield <nick@onecodex.com>"]
homepage = "https://github.com/onecodex/rust-bfield/"
repository = "https://github.com/onecodex/rust-bfield/"
readme = "README.md"
keywords = ["B-field", "probabilistic data structures"]
categories = ["data-structures"]
edition = "2018"
license = "Apache 2.0"
exclude = [
    ".gitignore",
    ".github/*",
    "docs/*",
]

[dependencies]
bincode = "1"
mmap-bitvec = "0.4.1"
murmurhash3 = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.3.1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3.3.0"

[[bench]]
name = "benchmark"
harness = false
